deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boke
  namespace: hugo
  labels:
    app: boke
spec:
  type: ClusterIP
  selector:
    app: boke
  ports:
    - name: http
      port: 9090
      targetPort: http
      protocol: TCP
